[tool.poetry]
name = "TDT4171"
version = "0.1.0"
description = ""
authors = ["sindrelothe <sindrl@online.no>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.2"
matplotlib = "^3.5.1"
jupyter = "^1.0.0"
pandas = "^1.4.0"
graphviz = "^0.19.1"
tensorflow = "^2.8.0"
black = "^22.1.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
